--- a/src/mech/cadquery_workflow/.gitignore
+++ b/src/mech/cadquery_workflow/.gitignore
@@ -1,8 +1,10 @@
+# SPDX-FileCopyrightText: 2023 Andreas Kahler <mail@andreaskahler.com>
+#
+# SPDX-License-Identifier: Unlicense
 
 __pycache__/
-*/__pycache__/
-gitbuilding/models/
-gitbuilding/svg/
-gitbuilding/3dprintingparts.md
-gitbuilding/3DPParts.yaml
-gitbuilding/DeviceParts.yaml
+/gitbuilding/models/
+/gitbuilding/svg/
+/gitbuilding/3dprintingparts.md
+/gitbuilding/3DPParts.yaml
+/gitbuilding/DeviceParts.yaml
