--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,11 +2,25 @@
 #
 # SPDX-License-Identifier: Unlicense
 
-name: check
+name: Deploy GitHub Pages
 
 on:
   push:
     branches: [ master, main ]
+
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   push_to_registry:
@@ -18,20 +32,37 @@ jobs:
         with:
           submodules: true
 
-      - name: Fix checkout ownership
-        run: |
-          # HACK Workaround for bug:
-          # https://github.com/actions/runner/issues/2033
-          mkdir -p /home/runner/work/_temp/_github_home
-          printf "[safe]\n\tdirectory = /github/workspace" \
-            > /home/runner/work/_temp/_github_home/.gitconfig
+      # - name: Fix checkout ownership
+      #   run: |
+      #     # HACK Workaround for bug:
+      #     # https://github.com/actions/runner/issues/2033
+      #     mkdir -p /home/runner/work/_temp/_github_home
+      #     printf "[safe]\n\tdirectory = /github/workspace" \
+      #       > /home/runner/work/_temp/_github_home/.gitconfig
 
       - name: OSH-Tool Check/Linting
         id: osh-check
         uses: hoijui/osh-tool@master
 
-      - name: Publish to GH Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          path: "public/"
+
+      # - name: Publish to GH Pages
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./public
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
