--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -44,6 +44,9 @@ jobs:
         id: osh-check
         uses: hoijui/osh-tool@master
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
