--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Run Gitbuilding
         working-directory: src/mech/cadquery_workflow/gitbuilding
         run: |
-          gitbuilding generate-html
+          gitbuilding build-html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
