Adds and adjusts REUSE licensing info [fix]

--- a/src/mech/cadquery_workflow/gitbuilding/buildconf.yaml
+++ b/src/mech/cadquery_workflow/gitbuilding/buildconf.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Andreas Kahler <mail@andreaskahler.com>
+#
+# SPDX-License-Identifier: CC-BY-SA-4.0
+
 Title: 'Nimble Rack'
 
 Authors:
