--- a/src/mech/cadquery_workflow/gitbuilding/fasteners.yaml
+++ b/src/mech/cadquery_workflow/gitbuilding/fasteners.yaml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Andreas Kahler <mail@andreaskahler.com>
+#
+# SPDX-License-Identifier: CC-BY-SA-4.0
 
 M4x10PanSteel:
     Name: M4x10 Pan Head Steel
