--- a/src/mech/cadquery_workflow/gitbuilding/tools.yaml
+++ b/src/mech/cadquery_workflow/gitbuilding/tools.yaml
@@ -1,4 +1,6 @@
-
+# SPDX-FileCopyrightText: 2023 Andreas Kahler <mail@andreaskahler.com>
+#
+# SPDX-License-Identifier: CC-BY-SA-4.0
 
 Screwdriver_Philips_No2:
     Name: No. 2 Phillips screwdriver
