--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,8 +6,7 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [ master, main ]
-
+    branches: [ master, main, develop ]
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
