--- a/doc_generator/server/requirements.txt
+++ b/doc_generator/server/requirements.txt
@@ -1,6 +1,6 @@
 fastapi>=0.101.1,<0.102.0
 uvicorn[standard]>=0.23.2,<0.24.0
 gunicorn
-cadquery
+cadscript
 orjson
 git+https://github.com/jmwright/cq-annotate.git
