get current cadscript dev branch instead of released version

--- a/doc_generator/server/requirements.txt
+++ b/doc_generator/server/requirements.txt
@@ -1,6 +1,6 @@
 fastapi>=0.101.1,<0.102.0
 uvicorn[standard]>=0.23.2,<0.24.0
 gunicorn
-cadscript
+git+https://github.com/cadscriptHQ/cadscript.git@dev
 orjson
 git+https://github.com/jmwright/cq-annotate.git
