--- a/doc_generator/requirements.txt
+++ b/doc_generator/requirements.txt
@@ -3,4 +3,5 @@
 # SPDX-License-Identifier: Unlicense
 
 cadquery>=2
+git+https://github.com/cadscriptHQ/cadscript.git@dev#egg=cadscript
 gitbuilding
