run exsource make from generate.py

--- a/doc_generator/requirements.txt
+++ b/doc_generator/requirements.txt
@@ -4,4 +4,6 @@
 
 cadquery>=2
 git+https://github.com/cadscriptHQ/cadscript.git@dev#egg=cadscript
+git+https://gitlab.com/gitbuilding/exsource-tools.git
+git+https://github.com/CadQuery/cq-cli.git
 gitbuilding
