--- a/doc_generator/requirements.txt
+++ b/doc_generator/requirements.txt
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Unlicense
 
 cadquery>=2
-git+https://github.com/cadscriptHQ/cadscript.git@dev#egg=cadscript
+cadscript>=0.5.1
 git+https://gitlab.com/gitbuilding/exsource-tools.git
 git+https://github.com/CadQuery/cq-cli.git
 gitbuilding
