--- a/doc_generator/requirements.txt
+++ b/doc_generator/requirements.txt
@@ -4,6 +4,6 @@
 
 cadquery>=2
 cadscript>=0.5.2
-git+https://gitlab.com/gitbuilding/exsource-tools.git
+exsource-tools
 git+https://github.com/CadQuery/cq-cli.git
 gitbuilding
