Tweak workflow 'on' rules

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,10 @@
 name: Build
 
 on:
-      push:
-        branches:
-          - 'master'
-      pull_request:
-        branches:
-          - '*'
+  push:
+    branches:
+      - master
+  pull_request: {}
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
