Further workflow tweaking

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,7 @@
 
 name: Build
 
-on:
-  push:
-    branches:
-      - master
-  pull_request: {}
+on: [push, pull_request]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
