--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,15 +3,9 @@
 #
 # SPDX-License-Identifier: Unlicense
 
-name: Publish
+name: Build
 
-on:
-  workflow_run:
-    workflows: Build 
-    branches:
-      - master
-      - workflow-fix
-    types: completed
+on: [push]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -25,19 +19,49 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  build:
+    
+    name: Compile
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Check out the repo"
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+
+      - name: Fix checkout ownership
+        run: |
+          # HACK Workaround for bug:
+          # https://github.com/actions/runner/issues/2033
+          mkdir -p /home/runner/work/_temp/_github_home
+          printf "[safe]\n\tdirectory = /github/workspace" \
+            > /home/runner/work/_temp/_github_home/.gitconfig
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install requirements
+        run: |
+          pip install -r requirements.txt
+
+      - name: Generate STL
+        run: |
+          python generate_static.py
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: "build/static/"
   # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      # Download artifact from other workflow
-      - name: Download artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: build.yml
-          path: "github-pages"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+        if: github.ref == 'refs/heads/workflow-fix'
