--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
-fastapi>=0.101.1,<0.102.0
+fastapi>=0.109.1
 uvicorn[standard]>=0.23.2,<0.24.0
 gunicorn
 git+https://github.com/cadscriptHQ/cadscript.git@dev
