Move generate_static to using exsource
To do this I also had to fix exsource_def_generator to distinfuish
between the key/id of the component and its human readable name.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,13 +41,13 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install requirements
+      - name: Install nimble packages
         run: |
-          pip install -r requirements.txt
+          pip install .
 
-      - name: Generate STL
+      - name: Generate STLs
         run: |
-          python generate_static.py
+          ./generate_static.py
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
