--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,6 +45,10 @@ jobs:
         run: |
           ./generate_static.py
 
+      - name: Generate example docs
+        run: |
+          ./generate.py
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
