Use cadorchestration to generate docs in ci

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Generate example docs
         run: |
-          ./generate.py
+          cadorchestrator generate '["NUC10i5FNH", "Raspberry_Pi_4B", "Raspberry_Pi_4B"]'
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
