Move config site logo and favicon into repo, add site dettings to cadorchestration.yml

--- a/cadorchestration.yml
+++ b/cadorchestration.yml
@@ -1,3 +1,7 @@
 configuration-class:
     module: nimble_orchestration.configuration
     class: NimbleConfiguration
+site-title: Wakoma Nimble Configurator
+site-tagline: Select Components for Your Nimble
+site-logo: assets/wakoma-logo.png
+site-favicon: assets/favicon.png
