--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Install nimble packages and dev tools
         run: |
+          pip install .
           pip install .[dev]
 
       - name: Run tests
