--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
       - name: Install nimble packages and dev tools
         run: |
           pip install -e .[dev]
+          pip list
 
       - name: Run tests
         uses: coactions/setup-xvfb@v1
