Use complete shelves in assembly

--- a/cadorchestration.yml
+++ b/cadorchestration.yml
@@ -6,3 +6,4 @@ site-title: Wakoma Nimble Configurator
 site-tagline: Select Components for Your Nimble
 site-logo: assets/wakoma-logo.png
 site-favicon: assets/favicon.png
+assembly-model: assembly/assembly.glb
