Modify Dockerfile for slim version usage, and setup.py for dependency issues testing. BUGGED.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,52 +1,56 @@
-FROM ubuntu:latest
+FROM python:3.10-slim
 
 # Install Linux dependencies
 RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-venv \
-    python3-pip \
     git \
     curl \
     xvfb \
-    libxkbcommon-x11-0 \
-    x11-apps \
-    xkb-data \
-    openscad \
+    # openscad \
     fontconfig \
-    mesa-utils \
-    libgl1 \
-    libgl1-mesa-dev \
-    libglu1-mesa \
-    libosmesa6 \
-    && rm -rf /var/lib/apt/lists/*
+    # mesa-demos \
+    # mesa-dev \
+    # glu \
+    # libx11 \
+    # libxrender \
+    # libxext \
+    # libsm \
+    # libice \
+    unzip
+ #   && rm -rf /var/lib/apt/lists/*
 
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
-    apt-get install -y nodejs && \
-    npm install -g npm
+
+RUN curl -fsSL https://bun.sh/install | bash && \
+    mv /root/.bun/bin/bun /usr/local/bin/bun
+
 
 WORKDIR /app
 ENV VIRTUAL_ENV=/app/venv
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+RUN pip install --upgrade pip
 
 WORKDIR /app
-RUN git clone https://github.com/kny5/cq-cli.git --branch server_hotfix_01
+RUN pip install cadquery-ocp
+
+WORKDIR /app
+RUN git clone https://github.com/kny5/cq-cli.git 
+# --branch server_hotfix_01
 
 WORKDIR /app/cq-cli
-RUN pip install -e .
+RUN pip install .
 
 WORKDIR /app
 RUN git clone https://gitlab.com/gitbuilding/cadorchestrator.git --branch server_hotfix_01
 
 WORKDIR /app/cadorchestrator/js/cadorchestrator-app
-RUN npm install && \
-    npm run build
+RUN bun install && \
+    bun run build
 
 WORKDIR /app/cadorchestrator
-RUN pip install -e .
+RUN pip install .
 
 WORKDIR /app
-RUN git clone https://github.com/Wakoma/nimble.git --branch server_hotfix_01
+RUN git clone https://github.com/Wakoma/nimble.git --branch zipties
 
 # Install dependencies:
 WORKDIR /app/nimble
@@ -54,7 +58,6 @@ RUN pip install -e .
 RUN pip install scad2gltf pytest pylint
 
 # Generate JSON from hardcoded configuration options
-
 ARG NOCODB_TOKEN
 ENV NOCODB_TOKEN=${NOCODB_TOKEN}
 
@@ -69,10 +72,10 @@ RUN Xvfb :99 -screen 0 1024x768x24 & \
     python -m pytest
 
 # Test generator
-WORKDIR /app/nimble
-RUN Xvfb :98 -screen 0 1024x768x24 & \
-   export DISPLAY=:98 && \
-   cadorchestrator --headless generate '{"device-ids": ["Raspberry_Pi_4B"]}'
+# WORKDIR /app/nimble
+# RUN Xvfb :98 -screen 0 1024x768x24 & \
+#    export DISPLAY=:98 && \
+#    cadorchestrator --headless generate '{"device-ids": ["Raspberry_Pi_4B"]}'
 
 # Use port 8000
 EXPOSE 8000
