Simplified Docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,27 +1,15 @@
 FROM python:3.10-slim
 
-# Install Linux dependencies
 RUN apt-get update && apt-get install -y \
     git \
     curl \
     xvfb \
-    # openscad \
     fontconfig \
-    # mesa-demos \
-    # mesa-dev \
-    # glu \
-    # libx11 \
-    # libxrender \
-    # libxext \
-    # libsm \
-    # libice \
-    unzip
- #   && rm -rf /var/lib/apt/lists/*
-
+    unzip \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://bun.sh/install | bash && \
     mv /root/.bun/bin/bun /usr/local/bin/bun
-
 
 WORKDIR /app
 ENV VIRTUAL_ENV=/app/venv
@@ -29,14 +17,10 @@ RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 RUN pip install --upgrade pip
 
-WORKDIR /app
-RUN pip install pytest pylint 
-# cadquery-ocp
+RUN pip install pytest pylint
 
-WORKDIR /app
 RUN pip install git+https://github.com/kny5/cq-cli.git@server_hotfix_01
 
-WORKDIR /app
 RUN git clone https://gitlab.com/gitbuilding/cadorchestrator.git --branch server_hotfix_01
 
 WORKDIR /app/cadorchestrator/js/cadorchestrator-app
@@ -52,29 +36,21 @@ RUN git clone https://github.com/Wakoma/nimble.git --branch alpha
 WORKDIR /app/nimble
 RUN pip install -e .
 
-# Generate JSON from hardcoded configuration options
 ARG NOCODB_TOKEN
 ENV NOCODB_TOKEN=${NOCODB_TOKEN}
 
-WORKDIR /app/nimble
+RUN Xvfb :98 -screen 0 1024x768x24 & \
+    export DISPLAY=:98 && \
+    python -m pytest
+
+RUN rm -rf build _cache_ _gb_temp_ && \
+    rm OrchestratorConfigOptions.json devices.json
+
 RUN nimble_devices_updater && \
     gen_nimble_conf_options
 
-# Run pytest
-# WORKDIR /app/nimble
-# RUN Xvfb :99 -screen 0 1024x768x24 & \
-#     export DISPLAY=:99 && \
-#    python -m pytest
+RUN pip freeze -l > requirements.txt
 
-RUN pip install -e .
-
-# Test generator
-# WORKDIR /app/nimble
-# RUN Xvfb :98 -screen 0 1024x768x24 & \
-#    export DISPLAY=:98 && \
-#    cadorchestrator --headless generate '{"device-ids": ["Raspberry_Pi_4B"]}'
-
-# Use port 8000
 EXPOSE 8000
 
 WORKDIR /app
