--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,7 @@ multidict==6.6.4
 multimethod>=1.9.1
 nlopt>=2.7.1
 nptyping==2.0.1
-numpy==1.26.4
+numpy>=1.26.4
 orjson==3.11.3
 packaging==25.0
 path==17.1.1
