Loosening requirements.txt for build/test

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ backports-datetime-fromisoformat==2.0.3
 blinker==1.9.0
 Brotli==1.1.0
 cadorchestrator @ git+https://gitlab.com/gitbuilding/cadorchestrator.git@a0bbf009b968970add7e3574497298c109e8ce3f
-cadquery>=2.4.0
-cadquery-ocp>=7.7.2.2b2
+cadquery==2.4.0
+cadquery-ocp==7.7.2.2b2
 cadquery_freecad_import_plugin>=1.0.0
 cadquery_png_plugin>=1.0.2
 cadscript>=0.5.3
