--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ attrs==25.3.0
 backports-datetime-fromisoformat==2.0.3
 blinker==1.9.0
 Brotli==1.1.0
--e git+https://gitlab.com/gitbuilding/cadorchestrator.git@a0bbf009b968970add7e3574497298c109e8ce3f#egg=cadorchestrator
+cadorchestrator @ git+https://gitlab.com/gitbuilding/cadorchestrator.git@a0bbf009b968970add7e3574497298c109e8ce3f
 cadquery==2.4.0
 cadquery-ocp==7.7.2.2b2
 cadquery_freecad_import_plugin>=1.0.0
@@ -61,7 +61,6 @@ msgpack==1.1.1
 multidict==6.6.4
 multimethod>=1.9.1
 multimethod==1.9.1
--e git+https://github.com/Wakoma/nimble.git@4d39ec92381a0092e1d4a65ca39d02e258dc3d52#egg=nimble
 nlopt==2.7.1
 nptyping==2.0.1
 numpy>=1.26.4
