Adding auto servernum to xvfb

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,12 +46,12 @@ jobs:
       - name: Generate STLs
         run: |
           gen_nimble_conf_options
-          xvfb-run -s "-screen 0 1920x1080x24" ./generate_static.py
+          xvfb-run -a -s "-screen 0 1920x1080x24" ./generate_static.py
 
       - name: Generate example docs
         uses: coactions/setup-xvfb@v1
         with:
-          run: 'xvfb-run -s "-screen 0 1920x1080x24" cadorchestrator --headless generate "{\"device-ids\": [\"NUC10i5FNH\", \"Raspberry_Pi_4B\"]}"'
+          run: 'xvfb-run -a -s "-screen 0 1920x1080x24" cadorchestrator --headless generate "{\"device-ids\": [\"NUC10i5FNH\", \"Raspberry_Pi_4B\"]}"'
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
